--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Chatify (Admin-enabled)</title>
+<title>Chatify</title>
 <style>
 :root {
   --background-color: #f5f5f5;
