--- a/index.html
+++ b/index.html
@@ -527,7 +527,15 @@ a{color:#0a66c2;text-decoration:underline}
 
 <div id="chatApp" aria-hidden="true">
   <header>
-    <div>Chatify (codename hover)</div>
+    <div style="display: flex; align-items: center; gap: 8px;">
+  <img 
+    src="https://res.cloudinary.com/dceqg5cky/image/upload/SDG_log-removebg-preview_bslq5d.png" 
+    alt="Chatify Logo" 
+    style="height: 30px; width: auto;"
+  />
+  <span>Chatify (codename hover)</span>
+</div>
+
     <div class="header-actions">
       <button id="profileBtn" class="button-clear" title="Set profile picture">Profile</button>
       <button id="toggleThemeBtn" class="button-clear" title="Toggle theme">Toggle Theme</button>
@@ -1326,4 +1334,3 @@ window.addEventListener('beforeunload', () => {
 </script>
 </body>
 </html>
-
