--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title id="pageTitle">Chatify</title>
 <style>
+  /* Add smooth gradient transitions */
+body.theme-transitioning * {
+  transition: background-color 0.8s cubic-bezier(0.4, 0, 0.2, 1),
+              color 0.8s cubic-bezier(0.4, 0, 0.2, 1),
+              border-color 0.8s cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 0.8s cubic-bezier(0.4, 0, 0.2, 1) !important;
+}
+
+/* Enhanced gradient backgrounds */
+body {
+  background: linear-gradient(135deg, var(--background-color) 0%, var(--secondary-background) 100%);
+  transition: background 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+[data-theme="dark"] body {
+  background: linear-gradient(135deg, var(--background-color) 0%, var(--secondary-background) 100%);
+}
+
+/* Smooth transitions for key elements */
+#chatApp,
+header,
+#chat,
+footer,
+.message,
+.admin-modal,
+.profile-modal-content,
+#pinBox {
+  transition: background-color 0.8s cubic-bezier(0.4, 0, 0.2, 1),
+              color 0.8s cubic-bezier(0.4, 0, 0.2, 1),
+              border-color 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
   html, body {
     height: 100%;
     margin: 0;
@@ -15,13 +46,16 @@
   }
 
   .white-overlay {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: white;
-    z-index: 1000;
-  }
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  z-index: 1000;
+  transition: background-color 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
   .intro {
     position: fixed;
@@ -32,6 +66,7 @@
     align-items: center;
     gap: 20px;
     z-index: 1001;
+    
   }
 
   .circle {
@@ -61,7 +96,13 @@
     letter-spacing: 2px;
     opacity: 0;
     animation: textReveal 0.4s ease-out 0.7s forwards;
-  }
+    transition: color 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+[data-theme="dark"] .text {
+    color: #949494;
+}
+
 
   @keyframes textReveal {
     0% { opacity: 0; transform: translateX(-100%); }
@@ -120,22 +161,26 @@
   const pageTitle = document.getElementById("pageTitle");
 
   function playIntro() {
-    intro.style.display = "flex";
-    whiteOverlay.style.display = "block";
+  const currentTheme = localStorage.getItem('theme') || (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+  const overlayColor = currentTheme === 'dark' ? '#333333' : 'white';
+  
+  intro.style.display = "flex";
+  whiteOverlay.style.display = "block";
+  whiteOverlay.style.backgroundColor = overlayColor;
 
-    // Show skip box (optional, still disabled)
-    setTimeout(() => document.querySelector(".skip-box").classList.add("show"), 1600);
+  // Show skip box (optional, still disabled)
+  setTimeout(() => document.querySelector(".skip-box").classList.add("show"), 1600);
 
-    // Complete animation + flash, then hide intro & overlay before chat loads
+  // Complete animation + flash, then hide intro & overlay before chat loads
+  setTimeout(() => {
+    chatifyText.classList.add("flash");
     setTimeout(() => {
-      chatifyText.classList.add("flash");
-      setTimeout(() => {
-        chatifyText.classList.remove("flash");
-        intro.style.display = "none";       // hide intro container
-        whiteOverlay.style.display = "none"; // hide overlay
-      }, 1000);
+      chatifyText.classList.remove("flash");
+      intro.style.display = "none";       // hide intro container
+      whiteOverlay.style.display = "none"; // hide overlay
     }, 1000);
-  }
+  }, 1000);
+}
 
   // Always play animation (skip disabled)
   playIntro();
@@ -190,6 +235,7 @@
   --message-other-background: #4a4a4a;
   --message-other-text: #ffffff;
   --overlay-background: rgba(255,255,255,0.2);
+  
 }
 
 *{box-sizing:border-box}
@@ -708,14 +754,28 @@ document.addEventListener('visibilitychange', () => {
 
 /* ==== Theme init ==== */
 // Set initial theme
+/* ==== Smooth Theme Transitions ==== */
 const savedTheme = localStorage.getItem('theme');
 const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
 document.documentElement.setAttribute('data-theme', savedTheme || (prefersDark ? 'dark' : 'light'));
+
 toggleThemeBtn.addEventListener('click', () => {
   const cur = document.documentElement.getAttribute('data-theme');
   const next = cur === 'dark' ? 'light' : 'dark';
-  document.documentElement.setAttribute('data-theme', next);
-  localStorage.setItem('theme', next);
+  
+  // Add transition class for smooth gradient changes
+  document.body.classList.add('theme-transitioning');
+  
+  // Small delay to ensure CSS transition starts
+  setTimeout(() => {
+    document.documentElement.setAttribute('data-theme', next);
+    localStorage.setItem('theme', next);
+  }, 10);
+  
+  // Remove transition class after animation completes
+  setTimeout(() => {
+    document.body.classList.remove('theme-transitioning');
+  }, 800);
 });
 
 /* ==== Persistence helpers ==== */
@@ -1414,5 +1474,6 @@ window.addEventListener('beforeunload', () => {
 </script>
 </body>
 </html>
+
 
 
